test/error/ast/AssignStringToNotEnoughArray.mod
MODULE AssignStringToNotEnoughArray;
VAR a: ARRAY 2 OF CHAR;
BEGIN
  a := "abc";
END AssignStringToNotEnoughArray.
